--- a/style/index.css
+++ b/style/index.css
@@ -17,7 +17,7 @@ font-size: 62.5%;
  
 body{
 font-family: Moto serif;
-font-size: 1.6rem;
+font-size: 2rem;
 line-height: 1.5;
 color: #4f4f4f;
 background-color: lightgray;
@@ -82,6 +82,7 @@ margin: 5%;
  
 }
 #about-section p{
+
    width:30%;
  }
  
@@ -141,7 +142,7 @@ width:10%;
    nav {
             display: flex;
           flex-direction: column;
-          /* justify-content: center; */
+          
          
         }
         #home-section{
@@ -175,5 +176,16 @@ width:10%;
         }
  
       }
- }
+ 
 
+@media (max-width: 500px){
+#about-section p{
+    width:100%;
+}
+#about-section{
+    margin:0 auto;
+}
+nav a{
+    width: 40%;
+}
+}
