Project is finished

--- a/style/index.css
+++ b/style/index.css
@@ -162,7 +162,7 @@ width:10%;
            justify-content: center;;
         }
         #about-section p{
-            width: 460;
+            width: 75%;
             margin:0 auto;
            
         }
